--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,13 @@
+0.1.2:
+ 
+*Added compatibility for Python 3.6 
+ 
 0.1.1:
-
+ 
 * remove tabdelim prereq
 * add unit test
 * release under Apache License v2
-
+ 
 0.1.0:
-
+ 
 * initial release
